--- a/eurekaserver-dev.yml
+++ b/eurekaserver-dev.yml
@@ -6,5 +6,5 @@ eureka:
   client:
     fetchRegistry: false
     registerWithEureka: false
-    serviceUrl:
+    service-url:
       defaultZone: http://localhost:7075/eureka/
