--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -20,3 +20,17 @@ info:
     name: "Accounts"
     Description: "Account micro service"
     version: "0.0.1-SNAPSHOT"
+management:
+  endpoints:
+    web:
+      exposer:
+        include: "*"
+  endpoint:
+    shutdown:
+      access: unrestricted
+  info:
+    env:
+      access: unrestricted
+endpoints:
+    shutdown:
+      access: unrestricted
