--- a/eurekaserver-dev.yml
+++ b/eurekaserver-dev.yml
@@ -8,7 +8,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    fetchRegistry: false
-    registerWithEureka: false
+    fetch-registry: false
+    register-with-eureka: false
     service-url:
       defaultZone: http://localhost:7075/eureka/
