--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -13,3 +13,11 @@ eureka:
       defaultZone: http://localhost:7075/eureka/
     register-with-eureka: true
     fetch-registry: true
+logging:
+  level:
+    com:
+      netflix:
+        discovery: DEBUG 
+    com:
+      netflix: 
+        eureka: DEBUG
