--- a/eurekaserver-dev.yml
+++ b/eurekaserver-dev.yml
@@ -11,4 +11,4 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url:
-      default-zone: http://localhost:7075/eureka/
+      defaultZone: http://localhost:7075/eureka/
