--- a/card-service-dev.yml
+++ b/card-service-dev.yml
@@ -14,4 +14,17 @@ server:
  port: 7071
  servlet:
   context-path: /card-service
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7075/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+logging:
+  level: 
+    root: INFO
+
  
