--- a/card-service-dev.yml
+++ b/card-service-dev.yml
@@ -23,6 +23,8 @@ eureka:
   instance:
     hostname: localhost
     prefer-ip-address: false
+    metadata-map:
+      context-path: /card-service
 logging:
   level: 
     root: INFO
