--- a/card-service-dev.yml
+++ b/card-service-dev.yml
@@ -23,8 +23,8 @@ eureka:
   instance:
     hostname: localhost
     prefer-ip-address: true
-    metadata-map:
-      context-path: /card-service
+    #metadata-map:
+     # context-path: /card-service
 logging:
   level: 
     root: INFO
