--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -10,7 +10,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eurekaserver:8671/eureka/
+      defaultZone: http://localhost:8671/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
