--- a/gateway.yml
+++ b/gateway.yml
@@ -8,8 +8,8 @@ server:
 eureka:
   client:
     service-url:
-      #defaultZone: http://localhost:7075/eureka/
-      defaultZone: http://eurekaserver:7075/eureka/
+      defaultZone: http://localhost:7075/eureka/
+      #defaultZone: http://eurekaserver:7075/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
