--- a/card-service-dev.yml
+++ b/card-service-dev.yml
@@ -2,8 +2,8 @@ spring:
  application:
   name: card-service
  datasource:
-  #url: jdbc:mysql://localhost:3306/card_db
-  url: jdbc:mysql://host.docker.internal:3306/card_db
+  url: jdbc:mysql://localhost:3306/card_db
+  #url: jdbc:mysql://host.docker.internal:3306/card_db
   username: root
   password: aritraeshita
  jpa:
@@ -18,7 +18,8 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eurekaserver:7075/eureka/
+      #defaultZone: http://eurekaserver:7075/eureka/
+      defaultZone: http://localhost:7075/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
