--- a/accounts-local.yml
+++ b/accounts-local.yml
@@ -10,8 +10,7 @@ config:
 eureka:
   client:
     service-url:
-      #defaultZone: http://eurekaserver:7075/eureka/
-      defaultZone: http://localhost:7075/eureka/
+      defaultZone: http://eurekaserver:7075/eureka/      
     register-with-eureka: true
     fetch-registry: true
   instance:
