--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -24,4 +24,4 @@ logging:
     com.netflix.discovery: DEBUG
     com.netflix.eureka: DEBUG
 service:
-  card: card-service
+  card: localhost:7071/card-service
