--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -25,4 +25,4 @@ logging:
     com.netflix.eureka: DEBUG
 service:
   card: card-service
-    url: http://localhost:7071/card-service
+    url: abcd
