--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -24,5 +24,6 @@ logging:
     com.netflix.discovery: DEBUG
     com.netflix.eureka: DEBUG
 service:
-  card: card-service
+  card: 
+    name: card-service
     url: http://localhost:7071/card-service
