--- a/card-service-dev.yml
+++ b/card-service-dev.yml
@@ -25,7 +25,7 @@ eureka:
   instance:
     hostname: localhost
     prefer-ip-address: true
-    ip-address: localhost
+    #ip-address: localhost
 logging:
   level: 
     root: INFO
