--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -1,10 +1,40 @@
 spring:
  application:
   name: gateway
+ cloud:
+  gateway:
+    discovery:
+     locator:
+      enabled: false
+      lower-case-service-id: true
+    routes:
+     - id: account-service
+       uri: lb://ACCOUNTS
+       predicates:
+        - Path=/accounts/**
+       filters:
+        - RewritePath=/accounts/(?<remaining>.*), /accounts/$\{remaining}
+     - id: card-service
+       uri: lb://CARD-SERVICE
+       predicates:
+        - Path=/card-service/**
+       filters:
+        - RewritePath=/card-service/(?<remaining>.*), /card-service/$\{remaining}
+ management:
+  endpoints:
+   web:
+    exposure:
+     include: "*"
+  endpoint:
+   gateway:
+    enabled: true
+ info:
+  app:
+   name: "Gateway"
+   description: "Gateway server"
+   version: "v1"   
 server:
- port: 7077
- #servlet:
-  #context-path: /gateway
+ port: 7077 
 eureka:
   client:
     service-url:
