--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -43,7 +43,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
   instance:
-    hostname: localhost
+    hostname: gateway
     prefer-ip-address: true
     ip-address: localhost
 logging:
