--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -38,15 +38,14 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7075/eureka/
       #defaultZone: http://eurekaserver:7075/eureka/
+      defaultZone: http://localhost:7075/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
     hostname: localhost
     prefer-ip-address: true
+    ip-address: localhost
 logging:
   level: 
     root: DEBUG
-
- 
