--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -1,6 +1,30 @@
 spring:
   application:
     name: gateway
+  profiles:
+    active: dev
+  cloud:
+    config:
+      uri: http://localhost:9090
+      fail-fast: true
+    gateway:
+      discovery:
+        locator:
+          enabled: false
+          lower-case-service-id: true
+      routes:
+        - id: account-service
+          uri: lb://ACCOUNTS
+          predicates:
+            - Path=/accounts/**
+          filters:
+            - RewritePath=/accounts/(?<remaining>.*), /accounts/${remaining}
+        - id: card-service
+          uri: lb://CARD-SERVICE
+          predicates:
+            - Path=/card-service/**
+          filters:
+            - RewritePath=/card-service/(?<remaining>.*), /card-service/${remaining}			
 server:
   port: 7077 
 eureka:
@@ -17,3 +41,17 @@ eureka:
 logging:
   level: 
     root: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    gateway:
+      enabled: true
+  info:
+    app:
+      name: "Gateway"
+      description: "Gateway server"
+      version: "v1"
