--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -32,7 +32,7 @@ eureka:
   instance:
     #hostname: localhost
     prefer-ip-address: true
-    #ip-address: localhost
+    ip-address: localhost
 logging:
   level: 
     root: DEBUG
