--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -25,8 +25,8 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eurekaserver:7075/eureka/
-      #defaultZone: http://localhost:7075/eureka/
+      #defaultZone: http://eurekaserver:7075/eureka/
+      defaultZone: http://localhost:7075/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
