--- a/card-service-local.yml
+++ b/card-service-local.yml
@@ -17,7 +17,8 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7075/eureka/
+      #defaultZone: http://localhost:7075/eureka/
+      defaultZone: http://eurekaserver-loc:7075/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
