--- a/accounts-local.yml
+++ b/accounts-local.yml
@@ -24,5 +24,6 @@ logging:
     com.netflix.discovery: DEBUG
     com.netflix.eureka: DEBUG
 service:
-  card: card-service
-  url: http://card-service:7071/card-service
+  card:
+    name: card-service
+    url: http://card-service:7071/card-service
