--- a/card-service-local.yml
+++ b/card-service-local.yml
@@ -2,7 +2,8 @@ spring:
  application:
   name: card-service
  datasource:
-  url: jdbc:mysql://localhost:3306/card_db
+  #url: jdbc:mysql://localhost:3306/card_db
+  url: jdbc:mysql://host.docker.internal:3306/card_db
   username: root
   password: aritraeshita
  jpa:
