--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -7,19 +7,19 @@ spring:
      locator:
       enabled: false
       lower-case-service-id: true
-    #routes:
-     #- id: account-service
-       #uri: lb://ACCOUNTS
-       #predicates:
-        #- Path=/accounts/**
-       #filters:
-        #- RewritePath=/accounts/(?<remaining>.*), /accounts/$\{remaining}
-     #- id: card-service
-       #uri: lb://CARD-SERVICE
-       #predicates:
-        #- Path=/card-service/**
-       #filters:
-        #- RewritePath=/card-service/(?<remaining>.*), /card-service/$\{remaining}
+    routes:
+     - id: account-service
+       uri: lb://ACCOUNTS
+       predicates:
+        - Path=/accounts/**
+       filters:
+        - RewritePath=/accounts/(?<remaining>.*), /accounts/$\{remaining}
+     - id: card-service
+       uri: lb://CARD-SERVICE
+       predicates:
+        - Path=/card-service/**
+       filters:
+        - RewritePath=/card-service/(?<remaining>.*), /card-service/$\{remaining}
  management:
   endpoints:
    web:
