--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -7,6 +7,9 @@ spring:
      locator:
       enabled: false
       lower-case-service-id: true
+    httpclient:
+      connect-timeout: 5000
+      response-timeout: 2s
     #routes:
      #- id: account-service
        #uri: lb://ACCOUNTS
