--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -10,15 +10,15 @@ spring:
     httpclient:
       connect-timeout: 5000
       response-timeout: 2s
- resilience4j:
-   circuitbreaker:
-     instances:
-       cardServiceCircuitBreaker:
-         registerHealthIndicator: true
-         slidingWindowSize: 5
-         permittedNumberOfCallsInHalfOpenState: 2
-         waitDurationInOpenState: 10s
-         failureRateThreshold: 50     
+ #resilience4j:
+   #circuitbreaker:
+     #instances:
+       #cardServiceCircuitBreaker:
+         #registerHealthIndicator: true
+         #slidingWindowSize: 5
+         #permittedNumberOfCallsInHalfOpenState: 2
+         #waitDurationInOpenState: 10s
+         #failureRateThreshold: 50     
  management:
   endpoints:
    web:
