--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -12,7 +12,7 @@ spring:
       response-timeout: 2s
  resilience4j:
    circuitbreaker:
-     instances:
+     config:
        accountServiceCircuitBreaker:
          registerHealthIndicator: true
          slidingWindowSize: 6
